--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
       <div class="container">
         <div class="row">
           <div class="col-md-6">
-            <form id="input">
+            <form id="entry">
               <div class="form-group">
                 <label for="title">Please enter a title</label>
                 <input type="text" class="form-control" id="title" placeholder="Please enter a title" required>
                 <label for="title">Please enter a title</label>
                 <input type="text" class="form-control" id="body" placeholder="Please enter a journal entry" required>
+                <button type="submit" name="button" class="btn btn-success">Submit Journal Entry</button>
               </div>
-              <button type="submit" name="button" class = "btn btn-success">Submit Journal Entry</button>
             </form>
           </div>
           <div class="col-md-6">
