--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <label for="title">Please enter a title</label>
                 <input type="text" class="form-control" id="title" placeholder="Please enter a title" required>
                 <label for="title">Please enter a title</label>
-                <input type="text" class="form-control" id="body" placeholder="Please enter a journal entry" required>
+                <textarea class="form-control" id="body" placeholder="Please enter a journal entry" required>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</textarea>
                 <button type="submit" name="button" class="btn btn-success">Submit Journal Entry</button>
               </div>
             </form>
